@@ -1,3 +1,11 @@
+Thu May 13 13:10:35 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
+
+        * DnC/Config_Handlers/Domain_Handler.cpp:
+        * DnC/Config_Handlers/Domain_Handler.h:
+
+          Updated Domain_Handler to handle property and
+          satisfier property elements.
+
 Wed May 12 20:05:55 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* examples/handcrafted/BasicSP_EC/EC/client.cpp:
